--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   emoji_picker_flutter: ^1.6.1
+  camera: ^0.10.5+4
 
 dev_dependencies:
   flutter_test:
